--- a/src/components/_images.scss
+++ b/src/components/_images.scss
@@ -1,11 +1,10 @@
-@import './colors.less';
-@import './borders.less';
+@import 'borders';
 
 img {
     max-width: 100%;
     height: auto;
     display: block;
-    .border;
+    @extend .border;
     &.float-left {
         float: left;
         margin: 1rem 1rem 1rem 0rem;
