--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -1,10 +1,10 @@
-@import './colors.less';
-@import './shadows.less';
-@import './borders.less';
-@import './forms.less'; // .disabled
+@import 'colors';
+@import 'shadows';
+@import 'borders';
+@import 'forms'; // .disabled
 
 button, .paper-btn, [type="button"] {
-    .shadow;
+    @extend .shadow;
     align-self:center;
     background:transparent;
     transition:all .5s ease, background-color .1s ease;
@@ -12,19 +12,19 @@ button, .paper-btn, [type="button"] {
     display: inline;
     outline:none;
     border:solid 2px $primary;
-    .border;
+    @extend .border;
     font-size: 1rem;
     padding: .75rem .75rem;
     cursor: pointer;
-    .shadow;
-    .shadow-hover;
+    @extend .shadow;
+    @extend .shadow-hover;
     &.btn-large {
-        .shadow-large;
+        @extend .shadow-large;
         font-size:2rem;
         padding:1rem 1rem;
     }
     &.btn-small {
-        .shadow-small;
+        @extend .shadow-small;
         font-size: .75rem;
         padding: .5rem;
     }
@@ -33,7 +33,7 @@ button, .paper-btn, [type="button"] {
         width: 100%;
     }
     &:hover {
-        .shadow-hover;
+        @extend .shadow-hover;
     }
     &:focus{
         border: 2px solid $secondary;
@@ -46,7 +46,7 @@ button, .paper-btn, [type="button"] {
       transition: none;
     }
     &.disabled, &[disabled] {
-        .disabled;
+        @extend .disabled;
     }
 }
 
@@ -66,19 +66,18 @@ a {
     }
 }
 
-@mixin make-button-color-classes($i: length($colors)) when ($i > 0)
-{
-    @include make-button-color-classes($i - 1);
-    $color: extract($colors, $i);
-    button.btn-${color}, .paper-btn.btn-${color}, [type="button"].btn-${color} {
-        border-color: $$color;
-        background-color: #{"${${color}-light}"};
-        color: #{"${${color}-text}"};
-        &:hover:active{
-            $darkcolour: #{"${color}-light"};
-            background-color: darken($$darkcolour, 10%);
-        }
+@each $colorName, $color, $color-light, $color-text in $colors {
+  .alert-#{$colorName} {
+    color: $color;
+    border-color: $color;
+    background-color: $color-light;
+  }
+  button.btn-#{$colorName}, .paper-btn.btn-#{$colorName}, [type="button"].btn-#{$colorName} {
+    border-color: $color;
+    background-color: $color-light;
+    color: $color-text;
+    &:hover:active {
+      background-color: darken($color-light, 10%);
     }
+  }
 }
-
-@include make-button-color-classes();
