--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -1,70 +1,63 @@
-@import 'colors';
-@import 'shadows';
-@import 'borders';
-@import 'forms'; // .disabled
-
-button, .paper-btn, [type="button"] {
-    @extend .shadow;
-    align-self:center;
-    background:transparent;
-    transition:all .5s ease, background-color .1s ease;
-    color: $primary;
-    display: inline;
-    outline:none;
-    border:solid 2px $primary;
-    @extend .border;
-    font-size: 1rem;
-    padding: .75rem .75rem;
-    cursor: pointer;
-    @extend .shadow;
-    @extend .shadow-hover;
-    &.btn-large {
-        @extend .shadow-large;
-        font-size:2rem;
-        padding:1rem 1rem;
-    }
-    &.btn-small {
-        @extend .shadow-small;
-        font-size: .75rem;
-        padding: .5rem;
-    }
-    &.btn-block {
-        display: block;
-        width: 100%;
-    }
-    &:hover {
-        @extend .shadow-hover;
-    }
-    &:focus{
-        border: 2px solid $secondary;
-        -webkit-box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
-        -moz-box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
-        box-shadow:2px 8px 4px -6px hsla(0,0%,0%,.3);
-    }
-    &:active {
-      border-color: hsla(0,0%,0%,.2);
-      transition: none;
-    }
-    &.disabled, &[disabled] {
-        @extend .disabled;
-    }
+button,
+.paper-btn,
+[type="button"] {
+  align-self: center;
+  background: transparent;
+  transition: all .5s ease, background-color .1s ease;
+  color: $primary;
+  display: inline;
+  outline: none;
+  border: solid 2px $primary;
+  @include border;
+  font-size: 1rem;
+  padding: .75rem .75rem;
+  cursor: pointer;
+  @include shadow;
+  &.btn-large {
+    @include shadow(large);
+    font-size: 2rem;
+    padding: 1rem 1rem;
+  }
+  &.btn-small {
+    @include shadow(small);
+    font-size: .75rem;
+    padding: .5rem;
+  }
+  &.btn-block {
+    display: block;
+    width: 100%;
+  }
+  &:hover {
+    @include shadow(hover);
+  }
+  &:focus {
+    border: 2px solid $secondary;
+    -webkit-box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, .3);
+    -moz-box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, .3);
+    box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, .3);
+  }
+  &:active {
+    border-color: hsla(0, 0%, 0%, .2);
+    transition: none;
+  }
+  &.disabled,
+  &[disabled] {
+    @extend .disabled;
+  }
 }
 
 a {
+  text-decoration: none;
+  background-image: linear-gradient(5deg, transparent 65%, $secondary 80%, transparent 90%), linear-gradient(165deg, transparent 5%, $secondary 15%, transparent 25%), linear-gradient(165deg, transparent 45%, $secondary 55%, transparent 65%), linear-gradient(15deg, transparent 25%, $secondary 35%, transparent 50%);
+  background-repeat: repeat-x;
+  background-size: 4px 3px;
+  background-position: 0 90%;
+  &:visited {
     text-decoration: none;
-    background-image:
-        linear-gradient(5deg, transparent 65%, $secondary 80%, transparent 90%),
-        linear-gradient(165deg, transparent 5%, $secondary 15%, transparent 25%),
-        linear-gradient(165deg, transparent 45%, $secondary 55%, transparent 65%),
-        linear-gradient(15deg, transparent 25%, $secondary 35%, transparent 50%);
-    background-repeat:repeat-x;
-    background-size: 4px 3px;
-    background-position:0 90%;
-    &:visited {
-        text-decoration: none;
-        color: $primary;
-    }
+    color: $primary;
+  }
 }
+
 
 @each $colorName, $color, $color-light, $color-text in $colors {
   .alert-#{$colorName} {
@@ -76,8 +69,10 @@ a {
     border-color: $color;
     background-color: $color-light;
     color: $color-text;
-    &:hover:active {
-      background-color: darken($color-light, 10%);
+    &:hover{
+      &:active {
+        background-color: darken($color-light, 10%);
+      }
     }
   }
 }
