moved shadow() mixin into config

--- a/src/components/_config.scss
+++ b/src/components/_config.scss
@@ -1,5 +1,4 @@
 // Global PaperCSS Config
-
 // Imports
 @import url('https://fonts.googleapis.com/css?family=Neucha|Patrick+Hand+SC');
 
@@ -31,6 +30,10 @@ $warning-text: $primary;
 $danger-text: $primary;
 $muted-text: $primary;
 
+$shadow-color-regular: hsla(0,0,0%,.2);
+$shadow-color-hover: hsla(0,0,0%,.3);
+
+
 // Set class names to generate the css classes on build
 $colors: (primary, $primary, $primary-light, $primary-text),
          (secondary, $secondary, $secondary-light, $secondary-text),
@@ -59,6 +62,12 @@ $large-screen: 1200px;
 $medium-screen: 992px;
 $small-screen: 768px;
 $xsmall-screen: 480px;
+
+// Sizes for shadows
+$shadow-small: 10px 19px 17px -13px $shadow-color-regular;
+$shadow-regular: 15px 28px 25px -18px $shadow-color-regular;
+$shadow-large: 20px 38px 34px -26px $shadow-color-regular;
+$shadow-hover: 2px 8px 8px -5px $shadow-color-hover;
 
 
 // Mixins
@@ -128,4 +137,22 @@ $xsmall-screen: 480px;
   -webkit-transform: translate($x, $y);
   -ms-transform: translate($x, $y);
   transform: translate($x, $y);
+}
+
+@mixin shadow($type: regular) {
+  @if $type == hover {
+    box-shadow: $shadow-hover;
+    @include translate(0, 2px);
+  } @else if $type == small {
+    transition: all .5s ease;
+    box-shadow: $shadow-small;
+  } @else if $type == regular {
+    transition: all .5s ease;
+    box-shadow: $shadow-regular;
+  } @else if $type == large {
+    transition: all .5s ease;
+    box-shadow: $shadow-large;
+  } @else {
+    @error "@mixin shadow(input) does not exist"
+  }
 }
