--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -8,38 +8,45 @@ button,
   display: inline;
   outline: none;
   border: solid 2px $primary;
-  @include border;
+  @include border();
   font-size: 1rem;
   padding: .75rem .75rem;
   cursor: pointer;
-  @include shadow;
+  @include shadow();
+
   &.btn-large {
     @include shadow(large);
     font-size: 2rem;
     padding: 1rem 1rem;
   }
+
   &.btn-small {
     @include shadow(small);
     font-size: .75rem;
     padding: .5rem;
   }
+
   &.btn-block {
     display: block;
     width: 100%;
   }
+
   &:hover {
     @include shadow(hover);
   }
+
   &:focus {
     border: 2px solid $secondary;
     -webkit-box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, .3);
     -moz-box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, .3);
     box-shadow: 2px 8px 4px -6px hsla(0, 0%, 0%, .3);
   }
+
   &:active {
     border-color: hsla(0, 0%, 0%, .2);
     transition: none;
   }
+
   &.disabled,
   &[disabled] {
     @extend .disabled;
