Fixed broken components

--- a/src/components/_alerts.scss
+++ b/src/components/_alerts.scss
@@ -1,5 +1,6 @@
 .alert {
-    @include border;
+    @include border-style();
+    border: 2px solid $primary;
     padding: 15px;
     margin-bottom: 20px;
     width: 100%;
