--- a/src/components/_article.scss
+++ b/src/components/_article.scss
@@ -21,5 +21,26 @@ article {
 		font-size: 30px;
 		line-height: 1.3;
 		margin: 35px 0px;
-	}
+  }
+
+  button {
+    @include resp(xs) {
+      margin: 0 auto;
+      display: block;
+      width: 100%;
+      margin-bottom: 1.5rem;
+    }
+
+    &:not(:first-of-type) {
+      margin-left: 2rem;
+
+      @include resp(xs) {
+        margin-left: 0;
+      }
+    }
+  }
+
+  p {
+    line-height: 1.6;
+  }
 }
