--- a/src/components/_config.scss
+++ b/src/components/_config.scss
@@ -1,47 +1,53 @@
-// Global PaperCSS Config
+/**
+  Global PaperCSS Config
+*/
+
 // Imports
 @import url('https://fonts.googleapis.com/css?family=Neucha|Patrick+Hand+SC');
 
-// Set Colors
-$primary: #41403E;
-$secondary: #0071DE;
+// Set theme colors
+$primary: #41403E !default;
+$secondary: #0071DE !default;
 
-$success: #86a361;
-$warning: #ddcd45;
-$danger: #a7342d;
-$muted: #868e96;
+$success: #86a361 !default;
+$warning: #ddcd45 !default;
+$danger: #a7342d !default;
+$muted: #868e96 !default;
 
-$primary-light: lighten($primary, 50%);
-$secondary-light: lighten($secondary, 50%);
-$success-light: lighten($success, 30%);
-$warning-light: lighten($warning, 30%);
-$danger-light: lighten($danger, 45%);
-$muted-light: lighten($muted, 35%);
+$primary-light: lighten($primary, 50%) !default;
+$secondary-light: lighten($secondary, 50%) !default;
+$success-light: lighten($success, 30%) !default;
+$warning-light: lighten($warning, 30%) !default;
+$danger-light: lighten($danger, 45%) !default;
+$muted-light: lighten($muted, 35%) !default;
 
-$white-dark: rgba(black, 0.03);
-$light-dark: rgba(black, 0.7);
-$white: rgba(white, 1);
-$main-background: rgba(white, 1);
+$white-dark: rgba(black, 0.03) !default;
+$light-dark: rgba(black, 0.7) !default;
+$white: rgba(white, 1) !default;
+$main-background: rgba(white, 1) !default;
 
-$primary-text: #FFF;
-$secondary-text: $primary;
-$success-text: $primary;
-$warning-text: $primary;
-$danger-text: $primary;
-$muted-text: $primary;
+$primary-text: #FFF !default;
+$secondary-text: $primary !default;
+$success-text: $primary !default;
+$warning-text: $primary !default;
+$danger-text: $primary !default;
+$muted-text: $primary !default;
 
-$shadow-color-regular: hsla(0,0,0%,.2);
-$shadow-color-hover: hsla(0,0,0%,.3);
+$shadow-color-regular: hsla(0,0,0%,.2) !default;
+$shadow-color-hover: hsla(0,0,0%,.3) !default;
 
 
-// Set class names to generate the css classes on build
+// Map to set your color names
 $colors: (primary, $primary, $primary-light, $primary-text),
          (secondary, $secondary, $secondary-light, $secondary-text),
          (success, $success, $success-light, $success-text),
          (warning, $warning, $warning-light, $warning-text),
          (danger, $danger, $danger-light, $danger-text),
          (muted, $muted, $muted-light, $muted-text);
-
+/**
+  This Loop will generate the various .text- and .background- classes
+  based on the $colors map above.
+*/
 @each $colorName, $color, $color-light in $colors {
   .text-#{$colorName} {
     color: $color;
@@ -51,26 +57,75 @@ $colors: (primary, $primary, $primary-light, $primary-text),
   }
 }
 
-// Set Fonts
-$global-font-size: 20px;
-$header-font: 'Patrick Hand SC';
-$body-font: 'Neucha';
-$font-color: $primary;
+// Font settings
+$global-font-size: 20px !default;
+$header-font: 'Patrick Hand SC' !default;
+$body-font: 'Neucha' !default;
+$font-color: $primary !default;
 
-// Sizes for responsive breakpoints
-$large-screen: 1200px;
-$medium-screen: 992px;
-$small-screen: 768px;
-$xsmall-screen: 480px;
+// Responsive breakpoints
+$large-screen: 1200px !default;
+$medium-screen: 992px !default;
+$small-screen: 768px !default;
+$xsmall-screen: 480px !default;
 
 // Sizes for shadows
-$shadow-small: 10px 19px 17px -13px $shadow-color-regular;
-$shadow-regular: 15px 28px 25px -18px $shadow-color-regular;
-$shadow-large: 20px 38px 34px -26px $shadow-color-regular;
-$shadow-hover: 2px 8px 8px -5px $shadow-color-hover;
+$shadow-small: 10px 19px 17px -13px $shadow-color-regular !default;
+$shadow-regular: 15px 28px 25px -18px $shadow-color-regular !default;
+$shadow-large: 20px 38px 34px -26px $shadow-color-regular !default;
+$shadow-hover: 2px 8px 8px -5px $shadow-color-hover !default;
 
 
 // Mixins
+/**
+  Assign a border style to a component selector.
+  @param    integer
+  @default  1
+*/
+@mixin border-style($style: 1) {
+  @if $style==1 {
+    border-top-left-radius: 255px 15px;
+    border-top-right-radius: 15px 225px;
+    border-bottom-right-radius: 225px 15px;
+    border-bottom-left-radius: 15px 255px;
+  }
+  @if $style==2 {
+    border-top-left-radius: 125px 25px;
+    border-top-right-radius: 10px 205px;
+    border-bottom-right-radius: 20px 205px;
+    border-bottom-left-radius: 185px 25px;
+  }
+  @if $style==3 {
+    border-top-left-radius: 15px 225px;
+    border-top-right-radius: 255px 15px;
+    border-bottom-left-radius: 225px 15px;
+    border-bottom-right-radius: 15px 255px;
+  }
+  @if $style==4 {
+    border-top-left-radius: 15px 225px;
+    border-top-right-radius: 25px 150px;
+    border-bottom-left-radius: 25px 115px;
+    border-bottom-right-radius: 155px 25px;
+  }
+  @if $style==5 {
+    border-top-left-radius: 250px 15px;
+    border-top-right-radius: 25px 80px;
+    border-bottom-left-radius: 20px 115px;
+    border-bottom-right-radius: 15px 105px;
+  }
+  @if $style==6 {
+    border-top-left-radius: 28px 125px;
+    border-top-right-radius: 100px 30px;
+    border-bottom-right-radius: 20px 205px;
+    border-bottom-left-radius: 15px 225px;
+  }
+}
+
+/**
+  Mixin for setting responsive breakpoints
+  @param string | integer
+  @default null
+*/
 @mixin resp($max:null, $min:null) {
   @if $max == large or $max == lg  { $max: $large-screen; }
   @if $max == medium or $max == md { $max: $medium-screen; }
@@ -82,6 +137,9 @@ $shadow-hover: 2px 8px 8px -5px $shadow-color-hover;
   @else { @error "no matching size found";}
 }
 
+/**
+  Useful helper mixins
+*/
 @mixin hr-after() {
   text-align: center;
   color: lighten($primary, 30%);
@@ -106,20 +164,6 @@ $shadow-hover: 2px 8px 8px -5px $shadow-color-hover;
   max-width: $percent;
 }
 
-@mixin make-column($columns) {
-  @each $breakpoint, $columnName in $columns {
-    // @todo: fix failing resp() mixin here
-    @media only screen and (max-width: $breakpoint) {
-      @for $i from 1 through $numberOfColumns {
-        .#{$columnName}-#{$i} {
-          flex: 0 0 $i * 100% / $numberOfColumns;
-          max-width: $i * 100% / $numberOfColumns;
-        }
-      }
-    }
-  }
-}
-
 @mixin li-bullet($char) {
   li:before {
     content: $char;
@@ -139,6 +183,11 @@ $shadow-hover: 2px 8px 8px -5px $shadow-color-hover;
   transform: translate($x, $y);
 }
 
+/**
+  Set the shadow type for a component
+  @param    string
+  @default  regular
+*/
 @mixin shadow($type: regular) {
   @if $type == hover {
     box-shadow: $shadow-hover;
