--- a/src/components/_images.scss
+++ b/src/components/_images.scss
@@ -1,23 +1,28 @@
 img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    @include border;
-    &.float-left {
-        float: left;
-        margin: 1rem 1rem 1rem 0rem;
-    }
-    &.float-right {
-        float: right;
-        margin: 1rem 0rem 1rem 1rem;
-    }
-    &.no-responsive {
-        max-width: initial;
-        height: initial;
-        display: initial;
-    }
-    &.no-border {
-        border: 0;
-        border-radius: 0;
-    }
+  max-width: 100%;
+  height: auto;
+  display: block;
+  border: 2px solid $primary;
+  @include border-style();
+
+  &.float-left {
+    float: left;
+    margin: 1rem 1rem 1rem 0rem;
+  }
+
+  &.float-right {
+    float: right;
+    margin: 1rem 0rem 1rem 1rem;
+  }
+
+  &.no-responsive {
+    max-width: initial;
+    height: initial;
+    display: initial;
+  }
+
+  &.no-border {
+    border: 0;
+    border-radius: 0;
+  }
 }
