--- a/src/components/_shadows.scss
+++ b/src/components/_shadows.scss
@@ -1,11 +1,28 @@
+.shadow {
+  @include shadow();
+
+  &.shadow-large {
+    @include shadow(large);
+  }
+
+  &.shadow-small {
+    @include shadow(small);
+  }
+  &.shadow-hover {
+    &:hover {
+      @include shadow(hover);
+    }
+  }
+}
+
 .child-shadows > * {
-  box-shadow: $shadow-regular;
-  transition: all .5s ease;
+  @include shadow();
 }
 
 .child-shadows-hover > * {
+  @include shadow();
+
   &:hover {
-    box-shadow: $shadow-hover;
-    transform: translate(0, 2px);
+    @include shadow(hover);
   }
 }
