--- a/src/components/_tabs.scss
+++ b/src/components/_tabs.scss
@@ -6,6 +6,17 @@
 
   input {
     display: none;
+
+    &:checked+label {
+      color: $primary;
+      border-bottom: solid 3px $secondary;
+    }
+
+    @for $num from 1 through 5 {
+      &[id="tab#{$num}"]:checked~div[id="content#{$num}"] {
+        display: block;
+      }
+    }
   }
 
   label {
@@ -15,20 +26,10 @@
     font-weight: 600;
     text-align: center;
     color: $primary-light;
+
     &:hover {
       color: $muted;
       cursor: pointer;
-    }
-  }
-
-  input:checked+label {
-    color: $primary;
-    border-bottom: solid 3px $secondary;
-  }
-
-  @for $num from 1 through 5 {
-    input[id="tabs#{$num}"]:checked~div[id="content#{$num}"] {
-      display: block;
     }
   }
 }
