Make buttons inline-block on mobile && remove article custom style.

--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -15,7 +15,7 @@ button,
   @include shadow();
 
   @include resp(520px) {
-    display: block;
+    display: inline-block;
     margin: 0 auto;
     text-align: center;
     margin-bottom: 1rem;
