convert accordion to scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,7 @@
 @import 'utilities/shadows';
 
 /* Components */
+@import 'components/accordion';
 @import 'components/alerts';
 @import 'components/article';
 @import 'components/badges';
