--- a/docs/layouts/partials/head/meta.html
+++ b/docs/layouts/partials/head/meta.html
@@ -3,6 +3,9 @@
 <meta name='description' content='The less formal CSS framework.'>
 <meta name='author' content='Rhyneav and PaperCSS contributors.'>
 
+<!-- Favicon -->
+<link rel='shortcut icon' href='/favicon.ico' type='image/x-icon'>
+
 {{ partial "head/opengraph" . }}
 
 {{ .Hugo.Generator }}
