--- a/docs/layouts/partials/footer.html
+++ b/docs/layouts/partials/footer.html
@@ -1,7 +1,6 @@
-      <div class="row flex-right">
-        <p>Made with 💛 by <a href="https://vlaservi.ch" target="_blank">Rhyne</a> and some <a href="https://github.com/rhyneav/papercss/graphs/contributors">fantastic contributors</a>!</p>
-      </div>
+        </div>
     </div>
+    {{ partial "nav/sidebar" . }}
   </div>
 </body>
 
