--- a/docs/layouts/_default/list.html
+++ b/docs/layouts/_default/list.html
@@ -6,9 +6,25 @@
   {{ .Content }}
 
   <div class='row flex-spaces'>
+
+  {{ range .Sections }}
+    <div class='collapsible full-width'>
+      <input id='collapsible-section-{{ .Title | urlize }}' type='checkbox' name='collapsible-section' checked>
+      <label for="collapsible-section-{{ .Title | urlize }}">{{ .Title }}</label>
+      <div class='collapsible-body'>
+        <div class='row'>
+        {{ range .Pages }}
+          {{ .Render "li" }}
+        {{ end }}
+        </div>
+      </div>
+    </div>
+  {{ end }}
+
   {{ range .Pages }}
     {{ .Render "li" }}
   {{ end }}
+
   </div>
 </div>
 
