--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -183,6 +183,13 @@ $shadow-hover: 2px 8px 8px -5px $shadow-color-hover !default;
   transform: translate($x, $y);
 }
 
+@mixin transition($name:all, $duration:235ms, $animation:ease-in-out, $delay:0s){
+  -webkit-transition: $name $duration $animation $delay;
+  -moz-transition: $name $duration $animation $delay;
+  -o-transition: $name $duration $animation $delay;
+  transition: $name $duration $animation $delay;
+}
+
 /**
   Set the shadow type for a component
   @param    string
