Minor style tweeks for 4k browsers

--- a/docs/layouts/partials/nav/sidebar.html
+++ b/docs/layouts/partials/nav/sidebar.html
@@ -2,7 +2,7 @@
     {{ range .Site.Sections }}
     <div class='paper'>
       <h3 class='sidebar-title' style='text-align:center'>
-        <a href='/docs'>PaperCSS Documentation</a>
+        <a href='/docs'>Documentation</a>
       </h3>
       <div class='row'>
         {{ range .Sections }}
@@ -24,7 +24,7 @@
     </div>
     {{ end }}
     <div class='paper'>
-      <div class="row flex-right">
+      <div class="row flex-center">
         <p>Made with 💛 by <a href="https://vlaservi.ch" target="_blank">Rhyne</a> and some <a href="https://github.com/rhyneav/papercss/graphs/contributors">fantastic contributors</a>!</p>
       </div>
     </div>
