--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -170,10 +170,16 @@ $shadow-hover: 2px 8px 8px -5px $shadow-color-hover !default;
   }
 }
 
-@mixin translate($x, $y) {
-  -webkit-transform: translate($x, $y);
-  -ms-transform: translate($x, $y);
-  transform: translate($x, $y);
+@mixin translate($x, $y, $z: 0, $transform3d: false) {
+  @if $transform3d {
+    -webkit-transform: translate3d($x, $y, $z);
+    -ms-transform: translate3d($x, $y, $z);
+    transform: translate3d($x, $y, $z);
+  } @else {
+    -webkit-transform: translate($x, $y);
+    -ms-transform: translate($x, $y);
+    transform: translate($x, $y);
+  }
 }
 
 /*
@@ -196,7 +202,7 @@ $shadow-hover: 2px 8px 8px -5px $shadow-color-hover !default;
 @mixin shadow($type: regular) {
   @if $type == hover {
     box-shadow: $shadow-hover;
-    @include translate(0, 2px);
+    @include translate(0, 2px, 0, true);
   } @else if $type == small {
     @include transition($animation: ease);
     box-shadow: $shadow-small;
