--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@
 @import 'components/popovers';
 @import 'components/tabs';
 @import 'components/utilities';
+@import 'components/navbar';
 
 // @media print {
 //  @import 'layout/print';
