--- a/src/components/_navbar.scss
+++ b/src/components/_navbar.scss
@@ -1,21 +1,35 @@
-html, body {
-  margin: 40px 0;
-  padding: 0;
-}
+// html, body {
+//   margin: 40px 0;
+//   padding: 0;
+// }
 
 .bar1, .bar2, .bar3 {
-  width: 35px;
-  height: 5px;
-  background-color: #41403e;
+  width: 2rem;
+  height: .3rem;
+  background-color: $primary;
   margin: 6px 0;
   transition: 0.4s;
+}
+nav {
+  .collapsible input[id^=collapsible]:checked + button .bar1 {
+    -webkit-transform: rotate(-45deg) translate(-9px, 7px);
+    transform: rotate(-45deg) translate(-9px, 7px);
+  }
+  .collapsible input[id^=collapsible]:checked + button .bar2 {
+    opacity: 0;
+  }
+  .collapsible input[id^=collapsible]:checked + button .bar3 {
+    -webkit-transform: rotate(45deg) translate(-8px, -9px);
+    transform: rotate(45deg) translate(-8px, -9px);
+  }
 }
 
 nav {
   display: flex;
   z-index: 100;
   width: 100%;
-  background-color: rgba(255, 255, 255, 1.0);
+  background-color: $main-background;
+  padding: .3rem;
 }
 nav.split-nav {
   justify-content: space-between;
@@ -26,82 +40,89 @@ nav.fixed {
   right: 0;
   left: 0;
 }
-nav div {
-  margin: 0 20px;
-}
-nav ul.inline {
-  padding: 0;
-}
-nav ul.inline li {
-  display: inline-block;
-  margin: 0 10px;
-}
-nav a {
-  padding-bottom: .1em;
-  background-image: none;
-  border-bottom: 5px solid #41403e;
-  border-bottom-left-radius: 15px 3px;
-  border-bottom-right-radius: 15px 5px;
-  color: #41403e;
-}
-nav a:hover {
-  border-bottom: 5px solid rgba(65, 64, 62, 0.5);
-}
-nav ul.inline li a {
-  font-size: 1.3em;
-}
-nav ul.inline li:before {
-  content: "";
-}
-.nav-brand {
-  margin: 0;
-  margin-bottom: .2em;
-}
 
-@media (min-width: 53em) {
+nav {
+  div {
+    margin: 0 1rem;
+  }
+  ul.inline {
+    padding: 0;
+    margin-bottom: 0;
+  }
+  ul.inline li {
+    display: inline-block;
+    margin: 0 .5rem;
+  }
+  a {
+    padding-bottom: .1rem;
+    background-image: none;
+    border-bottom: 5px solid $primary;
+    border-bottom-left-radius: 15px 3px;
+    border-bottom-right-radius: 15px 5px;
+    color: $primary;
+  }
+  a:hover {
+    border-bottom: 5px solid $primary-light;
+  }
+  ul.inline li a {
+    font-size: 1.3rem;
+  }
+  ul.inline li:before {
+    content: "";
+  }
+  .nav-brand {
+    margin: 0;
+    margin-bottom: .2rem;
+  }
+
+  .collapsible input[id^=collapsible]:checked ~ div.collapsible-body {
+    opacity: 1;
+    max-height: 960px;
+    padding: 0;
+    margin: 0;
+  }
+  .collapsible:nth-of-type(1),
+  .collapsible .collapsible-body {
+    border: none;
+  }
+  div.collapsible-body {
+    padding: none !important;
+  }
+  .collapsible label {
+    padding: 0;
+    border-bottom: none;
+  }
+  .btn-mobile {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 1.5rem;
+    margin-top: 1rem;
+    display: none;
+    background-color: $main-background;
+  }
+}
+@media (min-width: 53rem) {
   nav .collapsible .collapsible-body {
     display: contents;
   }
 }
-nav .collapsible input[id^=collapsible]:checked ~ div.collapsible-body {
-  opacity: 1;
-  max-height: 960px;
-  padding: 0;
-  margin: 0;
-}
-nav .collapsible:nth-of-type(1),
-nav .collapsible .collapsible-body {
-  border: none;
-}
-nav div.collapsible-body {
-  padding: none !important;
-}
-nav .collapsible label {
-  padding: 0;
-}
-nav .btn-mobile {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin-right: 1.5em;
-  margin-top: 1em;
-  display: none;
-  background-color: white;
-}
-@media (max-width: 62em) {
+@media (max-width: 62rem) {
   nav ul {
     text-align: center;
   }
 }
-@media (max-width: 53em) {
+@media (max-width: 53rem) {
   nav {
     display: block;
   }
-  nav ul.inline li {
-    display: block;
-    margin: 1em 0;
-  }
-  nav .btn-mobile {
-    display: block !important;
+  nav {
+    ul.inline li {
+      display: block;
+      margin: 1rem 0;
+    }
+    .btn-mobile {
+      display: block !important;
+    }
   }
 }
