--- a/src/components/_navbar.scss
+++ b/src/components/_navbar.scss
@@ -1,12 +1,8 @@
-// html, body {
-//   margin: 40px 0;
-//   padding: 0;
-// }
-
 nav {
   background-color: $main-background;
   display: flex;
   padding: 0.3rem;
+  position: relative;
   width: 100%;
   z-index: 100;
 
@@ -122,12 +118,12 @@ nav {
     border: 0;
 
     @include resp(null, $small-screen) {
-      display: contents !important;
+      display: contents;
     }
   }
 
   div.collapsible-body {
-    padding: none !important;
+    padding: none;
   }
 
   .collapsible label {
@@ -145,7 +141,7 @@ nav {
     top: 0;
 
     @include resp(small) {
-      display: block !important;
+      display: block;
     }
   }
 }
