fix mobile menu showing at 768px

--- a/src/components/_navbar.scss
+++ b/src/components/_navbar.scss
@@ -120,7 +120,7 @@ nav {
   .collapsible .collapsible-body {
     border: 0;
 
-    @include resp(null, $small-screen) {
+    @include resp(null, $small-screen + 1px) {
       display: contents;
     }
   }
