--- a/src/content/_lists.scss
+++ b/src/content/_lists.scss
@@ -26,7 +26,7 @@ ul {
   li {
     text-indent: -7px;
     
-    .badge {
+    .badge, [popover-bottom]::after, [popover-left]::after, [popover-right]::after, [popover-top]::after {
       text-indent: 0;
     }
 
