Created dismissible alerts

--- a/src/components/_alerts.scss
+++ b/src/components/_alerts.scss
@@ -4,6 +4,28 @@
   margin-bottom: 20px;
   padding: 15px;
   width: 100%;
+
+  &.dismissible {
+    -webkit-box-pack: justify;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+  }
+
+  .btn-close {
+    @include transition;
+    color: lighten($primary, 10%);
+    cursor: pointer;
+    margin-left: 1rem;
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: darken($primary, 10%);
+    }
+  }
 }
 
 @each $colorName, $color, $color-light in $colors {
@@ -11,5 +33,23 @@
     background-color: $color-light;
     border-color: $color;
     color: $color;
+
+    .btn-close {
+      color: lighten($color, 10%);
+      
+      &:hover,
+      &:active,
+      &:focus {
+        color: darken($color, 10%);
+      }
+    }
+  }
+}
+
+.alert-state {
+  display: none;
+
+  &:checked+.dismissible {
+    display: none;
   }
 }
