--- a/src/content/_lists.scss
+++ b/src/content/_lists.scss
@@ -26,7 +26,11 @@ ul {
   li {
     text-indent: -7px;
     
-    .badge, [popover-bottom]::after, [popover-left]::after, [popover-right]::after, [popover-top]::after {
+    .badge,
+    [popover-bottom]::after,
+    [popover-left]::after,
+    [popover-right]::after,
+    [popover-top]::after {
       text-indent: 0;
     }
 
