--- a/src/components/_alerts.scss
+++ b/src/components/_alerts.scss
@@ -6,12 +6,16 @@
   width: 100%;
 
   &.dismissible {
+    @include transition;
     -webkit-box-pack: justify;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    max-height: 48rem;
+    opacity: 1;
+    overflow: hidden;
   }
 
   .btn-close {
@@ -50,6 +54,11 @@
   display: none;
 
   &:checked+.dismissible {
-    display: none;
+    border-width: 0;
+    margin: 0;
+    max-height: 0;
+    opacity: 0;
+    padding-bottom: 0;
+    padding-top: 0;
   }
 }
