Created progress bar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@
 @import 'components/forms';
 @import 'components/modals';
 @import 'components/popovers';
+@import 'components/progress';
 @import 'components/tabs';
 @import 'components/utilities';
 @import 'components/navbar';
