--- a/src/components/_modals.scss
+++ b/src/components/_modals.scss
@@ -25,7 +25,6 @@
 
   .modal-body {
     @include transition;
-    @include translate(-50%, -50%);
     backface-visibility: hidden;
     background: $white;
     border: 2px solid $muted-light;
@@ -33,6 +32,7 @@
     padding: 1.25rem;
     position: absolute;
     top: 0;
+    transform: translate(-50%, -50%);
 
     @include resp(sm) {
       box-sizing: border-box;
